NoRef * Fixed a minor bug by removing our limit on the input width. This may cause some problems with screens where the form fields are stretched across the entire screen
git-svn-id: svn://data.ilscipio.com/ilscipio/ofbiz_foundation/trunk@9318 55bbc10b-e964-4c8f-a844-a62c6f7d3c80

--- a/themes/base/webapp/base/scss/_base.scss
+++ b/themes/base/webapp/base/scss/_base.scss
@@ -2,8 +2,6 @@
 $include-html-reveal-classes: $include-html-classes;
 body {}
 
-input,select,text-area {max-width:50em;}
-
 .fullWidth {
     width: 100%;
     /*max-width: 85em;*/
@@ -43,6 +41,10 @@ input,select,text-area {max-width:50em;}
         }
     }
 }
+
+// Fix form elements
+//input,select,text-area {max-width:50em;}
+
 
 /* NAVIGATION */
   
